:sparkles:排版标注优化

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -48,7 +48,7 @@
 
 历史是无数个追求着自己目的的人的活动的合力。
 
-人们自己创造自己的历史。
+**人们自己创造自己的历史**。
 
 15.
 
@@ -64,7 +64,7 @@
 
 17.事物发展过程中的“度”是指**保持事物的稳定性的数量界限，即事物的限度、幅度、范围（不是一个点）**。度的两端叫**关节点**或者**临界点**，超出度的范围，此物就转化为它物。
 
-18.底线是指度的**关节点**。
+18.**底线**是指度的**关节点**。
 
 19.摩擦生热属于**因果联系**，而电闪雷鸣不属于。
 
@@ -304,9 +304,9 @@
 
 39.**社会的发展和进步**集中表现为**社会形态的更替**。
 
-**社会形态**更替归根结底是**社会基本矛盾运动**的结果，其中具有最终**决定意义**的是**生产力的发展**。
+* **社会形态**更替归根结底是**社会基本矛盾运动**的结果，其中具有最终**决定意义**的是**生产力的发展**。
 
-**人民群众**是社会形态更替的**决定性力量**。
+* **人民群众**是社会形态更替的**决定性力量**。
 
 40.**人的发展**指人的体力、智力、个性和交往能力等的发展，其中**最根本**的是：**人的自由程度的提高**
 
@@ -490,7 +490,7 @@
 
 79.**资本积累的源泉**是工人创造的**剩余价值**，**资本积累**又是**资本主义扩大再生产的源泉**
 
-80.$剩余价值率m'=m/v=剩余价值/可变资本=剩余劳动/必要劳动=剩余劳动时间/必要劳动时间$
+80.剩余价值率 $m'=m/v=$ 剩余价值/可变资本 $=$ 剩余劳动/必要劳动 $=$ 剩余劳动时间/必要劳动时间
 
 80a.某资本家投资100万元，其预付资本的有机构成是3：1，资本家每次投资的剩余价值率为200%，该资本家每次投资的利润为：**50万元**。
 
@@ -580,7 +580,7 @@
 
 076a.**资本积累规模的大小**取决于资本家**对工人的剥削程度**、**劳动生产率的高低**、**所用资本和所费资本之间的差额**以及**资本家预付资本的大小**。
 
-077.由生产的技术水平所决定的生产资料和劳动力之间的比例，叫作资本的**技术构成**。
+077.由生产的**技术水平所决定的生产资料和劳动力之间的比例**，叫作资本的**技术构成**。
 
 078.在资本主义生产过程中资本**有机构成的提高**是一般趋势，这是由于**资本无限追逐剩余价值的本性**决定的。
 
@@ -944,8 +944,6 @@
 
 （干扰选项×：马克思主义中国化时代化的理论成果是一脉相承又与时俱进的关系。它们**都是**关于中国**革命、建设、改革**的正确的理论原则和经验总结）
 
-
-
 ### 第一章 毛泽东思想及其历史地位
 
 3.**毛泽东思想形成和发展的基础**——中国共产党领导人民进行**革命**和**建设**的成功实践。
@@ -1002,6 +1000,7 @@
 * 在中国民主革命中，**无产阶级领导权的中心问题**是**农民问题**。
 * **无产阶级的领导权**是**中国革命的中心问题**，也是**新民主主义革命理论的核心问题**。
 * **农民问题**乃**国民革命(1925-1927)的中心问题**——毛泽东《国民革命与农民运动》
+* 革命的**根本问题**是**国家政权问题**
 
 15.**没收封建地主阶级的土地归农民所有**，是新民主主义经济纲领的三项内容之一，是**新民主主义革命**的**主要内容**。
 
@@ -1051,7 +1050,9 @@
 
 * 对于中国革命经验教训的概括和总结（不属于**客观条件**）
 
-07.抗日战争时期中共巩固和扩大抗日民主统一战线的策略方针——**发展进步势力、争取中间势力、孤立顽固势力**。抗日战争时期中共对**顽固派**斗争的策略——**有理、有利、有节**。
+07.抗日战争时期中共巩固和扩大抗日民主统一战线的策略方针——**发展进步势力、争取中间势力、孤立顽固势力**。
+
+​      抗日战争时期中共对**顽固派**斗争的策略——**有理、有利、有节**。
 
 08.毛泽东提出，无产阶级及其政党要实现对同盟者的领导必须具备的条件有：
 
@@ -1114,7 +1115,7 @@
 2. 军民一致
 3. 瓦解敌军和优待俘虏
 
-018.坚持党对军队的绝对领导的内容
+018.坚持党对军队的绝对领导的内容：
 
 * 支部建在连上
 
@@ -1847,12 +1848,6 @@
 3. 党带领人民在伟大斗争中孕育的革命文化和社会主义先进文化是我们坚定文化自信的**坚强基石**
 4. **中国特色社会主义伟大实践**是我们坚定文化自信的**现实基础**
 
-031a.文化遗产：
-
-1. 承载灿烂文明，传承历史文化，维系民族精神
-2. 是**加强社会主义精神文明建设**的**深厚滋养**
-3. 历史文化遗产是**不可再生、不可替代的宝贵资源，要始终把保护放在第一位。**
-
 031.**伟大建党精神**是中国共产党的精神之源。
 
 032.**意识形态**关乎旗帜、关乎道路、关乎国家政治安全、决定文化前进方向和发展道路。
@@ -1868,8 +1863,6 @@
 2. 百家争鸣
 
 035.创新创造是**文化的生命所在**，是**文化的本质特征**。
-
-035a.习近平强调：激发全民族文化创新创造活力。坚持以人民为中心的创作导向，坚持把社会效益放在首位、社会效益与经济效益相统一，把**激发创新创造活力**作为深化文化体制机制改革的**中心环节**，加快完善文化管理体制和生产经营机制。
 
 036.**中华民族创造的优秀传统文化**是我们区别于其他国家和民族的**根本特征**。
 
@@ -1888,9 +1881,13 @@
 1. 守正不守旧、尊古不复古的进取精神
 2. 不惧新挑战、勇于接受新事物的无畏品格
 
-041.
+041.习近平强调：激发全民族文化创新创造活力。坚持以人民为中心的创作导向，坚持把社会效益放在首位、社会效益与经济效益相统一，把**激发创新创造活力**作为深化文化体制机制改革的**中心环节**，加快完善文化管理体制和生产经营机制。
 
-042.
+042.文化遗产：
+
+1. 承载灿烂文明，传承历史文化，维系民族精神
+2. 是**加强社会主义精神文明建设**的**深厚滋养**
+3. 历史文化遗产是**不可再生、不可替代的宝贵资源，要始终把保护放在第一位。**
 
 043.中华民族**最基本的文化基因**：（干扰项：与国际接轨）
 
@@ -1953,7 +1950,7 @@
 51a.生态文明理念：
 
 1. 尊重自然是人与自然相处的**首要态度**；
-2. 顺应自然是 人与自然和谐相处时应遵循的**基本原则**；
+2. 顺应自然是人与自然和谐相处时应遵循的**基本原则**；
 3. 保护自然是人与自然相处时应承担的**重要责任**；
 4. 生态文明的**核心**——坚持人与自然和谐共生
 
@@ -2153,7 +2150,7 @@
 
 * **独立自主**是中华民族的**精神之魂**，是我们立国立党的重要原则；
 
-* 独立自主，自力更生是我国社会经济发展的根本立足点（根本基点）。
+* **独立自主，自力更生**是我国社会经济发展的**根本立足点（根本基点）**。
 
 64.我国始终将周边置于外交全局的首要位置，秉持的**周边外交理念**是：**亲诚惠容**
 
@@ -2219,7 +2216,7 @@
 
 74.中国共产党区别于其他政党的显著标志，也是**我们党最大优势、最鲜明的品格**：**勇于自我革命**
 
-​      **人民立场**也是我们**党区别于其他政党的显著标志**。
+* **人民立场**也是我们**党区别于其他政党的显著标志**。
 
 75.**标本兼治**是新时代推进反腐败斗争的**鲜明特征**。
 
@@ -2452,7 +2449,7 @@
 
 23.1919年五四运动之后，**中国工人阶级开始以独立的姿态登上历史舞台**。**工人阶级**是新民主主义革命的领导阶级，但不是主力军（民主革命的**主力军是农民**）
 
-24.五四运动表现了**反帝反封建的彻底性**
+24.**五四运动**表现了**反帝反封建的彻底性**
 
 25.**五四运动**促进了马克思主义在中国的传播，拉开了新民主主义革命的序幕，**标志着中国青年成为推动总共社会变革的急先锋**。
 
@@ -2558,7 +2555,7 @@
 
 45.**《反对本本主义》**阐明了**坚持唯物辩证主义的思想路线**即坚持**理论与实际相结合**的原则的极端重要性，提出了“没有调查，没有发言权”和“中国革命斗争的胜利要靠中国同志了解中国情况”的重要思想，表现力**毛泽东开辟新道路、创造新理论的革命首创精神**。
 
-46.1929年12月，古田会议在福建上杭县古田村召开，其中最重要的是**关于纠正党内错误思想的决议案，确立了思想建党、政治建军原则**。
+46.1929年12月，**古田会议**在福建上杭县古田村召开，其中最重要的是**关于纠正党内错误思想的决议案，确立了思想建党、政治建军原则**。
 
 47.在新民主主义革命时期，中国共产党在不同阶段建立了**不同性质的革命政权**：
 
@@ -2578,8 +2575,8 @@
 | 1937-1945 | (全面)抗日战争时期 | 西安事变(时局转换枢纽) | 抗日民族统一战线（也有国共合作基础） |
 | 1945-1949 | 解放战争时期       | 国民党进攻中原解放区   | 人民民主统一战线                     |
 
-* 统一战线主题——**大团结大联合**(政协主题  ：**团结与民主**)
-* 统一战线方针——坚持一致性和多样性的统一
+* 统一战线**主题**——**大团结大联合**(政协主题  ：**团结与民主**)
+* 统一战线**方针**——坚持一致性和多样性的统一
 * 根本任务——争取人心、凝聚力量
 
 * **新时代爱国统一战线**的**历史责任是促进中华儿女大团结**
@@ -2909,7 +2906,7 @@
 
 91.经济有关话题的必要性回答模板：
 
-这是适应把握引领经济发展新常态的重大创新，是适应国际金融危机发生后综合国力竞争新形势的主动选择，是推动我国经济实现高质量发展的必然要求。
+​	这是适应把握引领经济发展新常态的重大创新，是适应国际金融危机发生后综合国力竞争新形势的主动选择，是推动我国经济实现高质量发展的必然要求。
 
 042.
 
@@ -2919,9 +2916,11 @@
 
 ### 绪论 当担复兴大任 成就时代新人
 
-1.**法治**发挥作用要以**国家强制力为后盾**，是治国理政的**基本方式**；
+1.法治与德治：
 
-**德治**发挥作用要通过人们的内心信念、传统习俗、社会舆论等进行道德教化，并对违反道德的行为进行道德谴责，是治国理政的**重要方式**。
+* **法治**发挥作用要以**国家强制力为后盾**，是治国理政的**基本方式**；
+
+* **德治**发挥作用要通过人们的内心信念、传统习俗、社会舆论等进行道德教化，并对违反道德的行为进行道德谴责，是治国理政的**重要方式**。
 
 01.既属于道德规范，又是法律规范的是：
 
@@ -3039,7 +3038,9 @@
 
 13.**劳动**创造了人和人类社会，是**道德起源**的**第一个历史前提**。
 
-13a.“情感欲望论”认为道德起源于人们的**情感欲望**，是人们为实现情感欲望而形成的行为要求；“动物本能论”则认为道德观念是**动物本能的延续**，进而把动物基于本能的活动与人类有目的、有意识的活动画上等号。可以说，在马克思主义产生之前，这些关于道德起源的观点，要么是主观唯心主义或客观唯心主义的注解，要么是旧唯物主义形而上学的分析，均无法正确揭示道德的起源。
+* “情感欲望论”认为道德起源于人们的**情感欲望**，是人们为实现情感欲望而形成的行为要求；
+* “动物本能论”则认为道德观念是**动物本能的延续**，进而把动物基于本能的活动与人类有目的、有意识的活动画上等号。
+* 可以说，在马克思主义产生之前，这些关于道德起源的观点，要么是主观唯心主义或客观唯心主义的注解，要么是旧唯物主义形而上学的分析，均无法正确揭示道德的起源。
 
 14.**道德的产生、发展和变化**，归根结底源于社会**经济关系**。
 
@@ -3065,11 +3066,9 @@
 
 21.中国**革命道德的灵魂**：**坚持社会主义和共产主义理想信念**
 
-21a.革命的**根本问题**是**国家政权问题**
-
 22.贯穿中国革命道德始终的**一根红线**：**全心全意为人民服务**
 
-22a.始终把革命利益放在首位；树立社会新风，建立新型人际；修身自律，保持节操是**革命的重要内容**
+* 始终把革命利益放在首位；树立社会新风，建立新型人际；修身自律，保持节操是**革命的重要内容**
 
 23.家庭美德主要内容包括：尊老爱幼、男女平等、夫妻和睦、勤俭持家、**邻里互助**。
 
@@ -3258,7 +3257,7 @@
 
 44.**人身自由**是**人们一切行动和生活的前提条件**。
 
-45.享有**生命权**，是人享有其他权利的前提。
+45.享有**生命权**，是人享有其他权利的**前提**。
 
 022.“十一个坚持”中，科学指明了中国特色社会主义法治的**前进方向**的是（下面三者共同决定前进方向）：
 
@@ -3292,7 +3291,7 @@
 
 027.**推进全面依法治国**，根本目的是**依法保障人民权益**。
 
-028.**发展**是解决一切问题的总钥匙。
+028.**发展**是解决一切问题的**总钥匙**。
 
 029.中国特色社会主义**法治道路的核心要义**，就是要：
 
@@ -3489,7 +3488,7 @@
 
 18.**坚持相互尊重、坚持独立自主、妥善管控分歧**是**增强中欧关系稳定性**的要求。
 
-18a.中欧合作的**本质**是**优势互补、互利共赢**。
+* 中欧合作的**本质**是**优势互补、互利共赢**。
 
 19.中国的产能不是天上掉下来的，是客观因素和主观努力共同作用的结果，符合基本经济理论和主要发达经济体发展规律。
 
@@ -3595,4 +3594,4 @@
 
 35.为什么“人类需要保护绿色，不需要绿色保护主义”：
 
-​	**中国新能源产业在开放竞争中练就了真本事，代表的是先进产能，不仅丰富了全球供 给，缓解了全球通胀压力，也为全球应对气候变化和绿色转型作出巨大贡献。**不论是从比较优势还是全球市场需求角度看，都不存在所谓“中国产能过剩问题”。**炒作中国新能源“产能过剩”，是经济逆全球化和保护主义、单边主义的新托辞，其最大企图是遏制打压中国优势产业。**保护主义与公平竞争原则背道而驰，非但保护不了本国产业，还会损害国家间 经济关系，不利于全球共同发展进步。 	**建设绿色家园是人类的共同梦想，中国致力于推动共建地球生命共同体，积极参与全球环境治理，是全球生态文明建设的重要<u>参与者、贡献者、引领者</u>。**中国积极推动新能源 产业发展，助力各国获得清洁、可靠、用得起的能源，为全球应对气候变化作出重要贡献。 **中国将坚定不移走绿色发展之路，继续为全球绿色转型提供<u>重要动力</u>**。
+​	**中国新能源产业在开放竞争中练就了真本事，代表的是先进产能，不仅丰富了全球供给，缓解了全球通胀压力，也为全球应对气候变化和绿色转型作出巨大贡献。**不论是从比较优势还是全球市场需求角度看，都不存在所谓“中国产能过剩问题”。**炒作中国新能源“产能过剩”，是经济逆全球化和保护主义、单边主义的新托辞，其最大企图是遏制打压中国优势产业。**保护主义与公平竞争原则背道而驰，非但保护不了本国产业，还会损害国家间经济关系，不利于全球共同发展进步。 	**建设绿色家园是人类的共同梦想，中国致力于推动共建地球生命共同体，积极参与全球环境治理，是全球生态文明建设的重要<u>参与者、贡献者、引领者</u>。**中国积极推动新能源 产业发展，助力各国获得清洁、可靠、用得起的能源，为全球应对气候变化作出重要贡献。 **中国将坚定不移走绿色发展之路，继续为全球绿色转型提供<u>重要动力</u>**。
