--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -4,20 +4,18 @@
 
 ### 导论
 
-1-5.马恩著作：
+1-6.马恩著作：
 
 | 著作                                      | 对应                                                         |
 | ----------------------------------------- | ------------------------------------------------------------ |
 | 《德意志的意识形态》                      | 首次阐述了**历史唯物主义**的基本观点                         |
-| 《德法年鉴》上的论文                      | 马克思、恩格斯完成了**从唯心主义向唯物主义，从革命民主主义向共产主义**转变 |
+| 《德法年鉴》上的论文                      | 马克思、恩格斯完成了**从唯心主义向唯物主义，从革命民主主义向共产主义**转变，为**创立马克思主义奠定思想前提** |
 | 《神圣家族》                              | 马克思、恩格斯的**第一次合作**                               |
 | 《反杜林论》                              | **全面阐述了马克思主义理论体系**，也是马克思主义的**百科全书** |
 | 《法兰西内战》、《哥达纲领批判》          | 前者**科学总结巴黎公社的历史经验和教训**，后者**丰富了科学社会主义学说** |
 | 《共产党宣言》的发表                      | **标志着马克思主义公开问世**                                 |
 | 《资本论》                                | **工人阶级的圣经**                                           |
 | 《1848年至1850年的法兰西阶级斗争》-恩格斯 | ①认识到社会主义革命的胜利将是一个长期的过程<br />②论述了利用资产阶级民主和普选权的重要性 |
-
-6.为**创立马克思主义奠定思想前提**的是：马克思、恩格斯完成了从唯心主义向唯物主义，从革命民主主义向共产主义转变（或者说《德法年鉴》的发表）
 
 7.**人民性**是马克思主义的**本质属性**；**人民性、实践性和发展性**集中地体现为**革命性**。
 
