:memo:完善部分内容

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -30,7 +30,7 @@
 
 ### 第一章 世界的物质性及发展规律
 
-9.对于存在和思维，物质和意识是否具有同一性的问题，哲学可划分为**可知论和不可知论**。
+9.对于存在和思维，物质和意识是否具有同一性的问题，哲学可划分为**可知论**和**不可知论**。
 
 10.辩证唯物主义最基本、最核心的观点是——**世界的物质统一性原理**
 
@@ -64,7 +64,7 @@
 
 18.**底线**是指度的**关节点**。
 
-19.摩擦生热属于**因果联系**，而电闪雷鸣不属于。
+19.摩擦生热属于**因果联系**，而电闪雷鸣不属于因果关系，而属于并列关系。
 
 20.一个事物只要合乎发展的必然性**迟早会变成现实**
 
